@@ -58,9 +58,9 @@ public ValidWhenLexer(LexerSharedInputState state) {
 	caseSensitiveLiterals = true;
 	setCaseSensitive(false);
 	literals = new Hashtable();
-	literals.put(new ANTLRHashString("null", this), new Integer(12));
-	literals.put(new ANTLRHashString("or", this), new Integer(17));
-	literals.put(new ANTLRHashString("and", this), new Integer(16));
+	literals.put(new ANTLRHashString("null", this), Integer.valueOf(12));
+	literals.put(new ANTLRHashString("or", this), Integer.valueOf(17));
+	literals.put(new ANTLRHashString("and", this), Integer.valueOf(16));
 }
 
 public Token nextToken() throws TokenStreamException {
