@@ -434,7 +434,7 @@ public ValidWhenParser(ParserSharedInputState state) {
 			   Object v2 = argStack.pop();
 			   Object comp = argStack.pop();
 		Object v1 = argStack.pop();
-		argStack.push(new Boolean(evaluateComparison(v1, comp, v2)));
+		argStack.push(Boolean.valueOf(evaluateComparison(v1, comp, v2)));
 		
 	}
 	
@@ -449,9 +449,9 @@ public ValidWhenParser(ParserSharedInputState state) {
 		Integer join = (Integer) argStack.pop();
 		Boolean v2 = (Boolean) argStack.pop();
 		if (join.intValue() == AND) {
-		argStack.push(new Boolean(v1.booleanValue() && v2.booleanValue()));
+		argStack.push(Boolean.valueOf(v1.booleanValue() && v2.booleanValue()));
 		} else {
-		argStack.push(new Boolean(v1.booleanValue() || v2.booleanValue()));
+		argStack.push(Boolean.valueOf(v1.booleanValue() || v2.booleanValue()));
 		}
 		
 	}
@@ -463,13 +463,13 @@ public ValidWhenParser(ParserSharedInputState state) {
 		case ANDSIGN:
 		{
 			match(ANDSIGN);
-			argStack.push(new Integer(AND));
+			argStack.push(Integer.valueOf(AND));
 			break;
 		}
 		case ORSIGN:
 		{
 			match(ORSIGN);
-			argStack.push(new Integer(OR));
+			argStack.push(Integer.valueOf(OR));
 			break;
 		}
 		default:
@@ -486,37 +486,37 @@ public ValidWhenParser(ParserSharedInputState state) {
 		case EQUALSIGN:
 		{
 			match(EQUALSIGN);
-			argStack.push(new Integer(EQUAL));
+			argStack.push(Integer.valueOf(EQUAL));
 			break;
 		}
 		case GREATERTHANSIGN:
 		{
 			match(GREATERTHANSIGN);
-			argStack.push(new Integer(GREATER_THAN));
+			argStack.push(Integer.valueOf(GREATER_THAN));
 			break;
 		}
 		case GREATEREQUALSIGN:
 		{
 			match(GREATEREQUALSIGN);
-			argStack.push(new Integer(GREATER_EQUAL));
+			argStack.push(Integer.valueOf(GREATER_EQUAL));
 			break;
 		}
 		case LESSTHANSIGN:
 		{
 			match(LESSTHANSIGN);
-			argStack.push(new Integer(LESS_THAN));
+			argStack.push(Integer.valueOf(LESS_THAN));
 			break;
 		}
 		case LESSEQUALSIGN:
 		{
 			match(LESSEQUALSIGN);
-			argStack.push(new Integer(LESS_EQUAL));
+			argStack.push(Integer.valueOf(LESS_EQUAL));
 			break;
 		}
 		case NOTEQUALSIGN:
 		{
 			match(NOTEQUALSIGN);
-			argStack.push(new Integer(NOT_EQUAL));
+			argStack.push(Integer.valueOf(NOT_EQUAL));
 			break;
 		}
 		default:
