@@ -355,7 +355,7 @@ public class IterateTag extends BodyTagSupport {
             started = true;
 
             if (indexId != null) {
-                pageContext.setAttribute(indexId, new Integer(getIndex()));
+                pageContext.setAttribute(indexId, Integer.valueOf(getIndex()));
             }
 
             return (EVAL_BODY_TAG);
@@ -395,7 +395,7 @@ public class IterateTag extends BodyTagSupport {
             lengthCount++;
 
             if (indexId != null) {
-                pageContext.setAttribute(indexId, new Integer(getIndex()));
+                pageContext.setAttribute(indexId, Integer.valueOf(getIndex()));
             }
 
             return (EVAL_BODY_TAG);
